# chainchat

./: .gitignore  README.md  models.yaml.sample  pyproject.toml
.github/workflows/: publish.yml  test.yml
plugins/chainchat-tools/: pyproject.toml
plugins/chainchat-tools/src/chainchat_tools/: __init__.py
plugins/elelem-providers/: pyproject.toml
plugins/elelem-providers/src/elelem_providers/: __init__.py  anthropic.py  cerebras.py  google.py  groq.py  openai.py
plugins/elelem-tools/: pyproject.toml
plugins/elelem-tools/src/elelem_tools/: __init__.py
src/chainchat/: __init__.py  attachment.py  cache.py  chat.py  cli.py  conversation.py  finder.py  loader.py  model.py  pipe.py  provider.py  render.py  tool.py  trace.py
src/chainchat/plugins/: __init__.py  hookspecs.py
src/elelem/: __init__.py  attachment.py  chat.py  cli.py  provider.py
src/elelem/plugins/: __init__.py  hookspecs.py  provider.py
tests/: conftest.py  test_attachment.py  test_cli.py  test_finder.py  test_loader.py
