[project]
name = "elelem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Wason", email = "rectalogic@rectalogic.com" }
]
requires-python = ">=3.12"
dependencies = [
    "elelem-providers",
    "elelem-tools",
    "click~=8.1.7",
    "langchain-core~=0.3.13",
    "pluggy~=1.5.0",
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.scripts]
elelem = "elelem.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy~=1.13.0",
    "pytest~=8.3.3",
    "ruff~=0.7.1",
]

[tool.uv.sources]
elelem-providers = { workspace = true }
elelem-tools = { workspace = true }

[tool.uv.workspace]
members = ["plugins/*"]

[tool.ruff]
target-version = "py312"
line-length = 108

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pyupgrade
    "UP",
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
show_error_codes = true
files = "src/**/*.py"
