[project]
name = "chainchat-tools"
dynamic = ["version"]
dependencies = [
    "chainchat",
    "click~=8.1.7",
    "langchain-community~=0.3.3",
]

[project.entry-points.chainchat]
tools = "chainchat_tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "../../pyproject.toml"
pattern = 'version = "(?P<version>[^"]+)'

[tool.uv.sources]
chainchat = { workspace = true }
