[project]
name = "elelem-providers"
dynamic = ["version"]
dependencies = [
    "elelem",
    "langchain-google-genai>=2.0.3",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.4",
]

[project.entry-points.elelem]
providers = "elelem_providers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "../../pyproject.toml"
pattern = 'version = "(?P<version>[^"]+)'

[tool.uv.sources]
elelem = { workspace = true }
