[project]
name = "elelem-tools"
dynamic = ["version"]
dependencies = [
    "elelem",
    "langchain-community>=0.3.3",
]

[project.entry-points.elelem]
tools = "elelem_tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "../../pyproject.toml"
pattern = 'version = "(?P<version>[^"]+)'

[tool.uv.sources]
elelem = { workspace = true }
